@@ -118,7 +118,7 @@
 </addon>
 <addon id="plugin.video.dmd-czech.joj"
        name="JOJ TV Archiv"
-       version="1.6"
+       version="1.7"
        provider-name="Jiri Vyhnalek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
@@ -141,7 +141,7 @@
 </addon>
 <addon id="plugin.video.dmd-czech.markiza"
        name="Markiza TV Archiv"
-       version="1.51"
+       version="1.52"
        provider-name="Jiri Vyhnalek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
