@@ -1,6 +1,7 @@
 # -*- coding: utf-8 -*-
 import urllib2,urllib,re,os
 from parseutils import *
+from urlparse import urlparse
 import xbmcplugin,xbmcgui,xbmcaddon
 __dmdbase__ = 'http://iamm.netuje.cz/emulator/joj/image/'
 _UserAgent_ = 'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.9.0.3) Gecko/2008092417 Firefox/3.0.3'
@@ -14,74 +15,89 @@ nexticon = xbmc.translatePath( os.path.join( home, 'nextpage.png' ) )
 fanart = xbmc.translatePath( os.path.join( home, 'fanart.jpg' ) )
 
 def OBSAH():
-    addDir('Publicistika','http://www.joj.sk',1,icon)
-    addDir('Seriály','http://www.joj.sk',2,icon)
-    addDir('Zábava','http://www.joj.sk',3,icon)
-    addDir('Videoportal.sk','http://www.videoportal.sk/kategorie.html',9,icon)
-    addDir('Speciál Hotel Paradise','http://hotelparadise.joj.sk/hotelparadise-video/video-epizody.html',20,icon)        
+    addDir('Publicistika','http://www.joj.sk',1,icon,1)
+    addDir('Seriály','http://www.joj.sk',2,icon,1)
+    addDir('Zábava','http://www.joj.sk',3,icon,1)
+    addDir('Videoportal.sk','http://www.videoportal.sk/kategorie.html',9,icon,1)
+    addDir('Speciál Hotel Paradise','http://hotelparadise.joj.sk/hotelparadise-video/video-epizody.html',20,icon,1)        
 def OBSAH_PUB():
-    addDir('Črepiny *','http://crepiny.joj.sk/crepiny-s-hviezdickou-archiv.html',4,__dmdbase__+'crepiny-s-hviezdickou.jpg')
-    addDir('Exclusiv','http://www.joj.sk/exclusiv/exclusiv-archiv.html',4,__dmdbase__+'exclusiv.jpg')
-    addDir('Krimi noviny','http://krimi.joj.sk/krimi-noviny-archiv.html',4,__dmdbase__+'krimi-noviny.jpg')
-    addDir('Najlepšie počasie','http://www.joj.sk/najlepsie-pocasie/najlepsie-pocasie-archiv.html',4,__dmdbase__+'najlepsie-pocasie.jpg')
-    addDir('Noviny','http://www.joj.sk/relacia-noviny/noviny-archiv.html',4,__dmdbase__+'noviny_01.jpg.jpg')
-    addDir('Noviny o 12:00','http://www.joj.sk/noviny-o-12-00/noviny-o-12-00-archiv.html',4,__dmdbase__+'noviny-o-12-00.jpg.jpg')
-    addDir('Noviny o 17:00','http://www.joj.sk/noviny-o-17-00/noviny-o-17-00-archiv.html',4,'http://c.static.joj.sk/uploads/tx_media/thumbs/310x175/noviny-o-17-00_79970.jpg')
-    addDir('Top Star','http://www.joj.sk/top-star/top-star-archiv.html',4,'http://b.static.joj.sk/uploads/tx_media/thumbs/150x82/joj-2-122004-0401-h264-pal_142574.jpg')
-    addDir('Šport','http://www.joj.sk/relacia-sport/sport-archiv.html',4,__dmdbase__+'sport.jpg')
+    addDir('Črepiny *','http://crepiny.joj.sk/crepiny-s-hviezdickou-archiv.html',4,__dmdbase__+'crepiny-s-hviezdickou.jpg',1)
+    addDir('Exclusiv','http://www.joj.sk/exclusiv/exclusiv-archiv.html',4,__dmdbase__+'exclusiv.jpg',1)
+    addDir('Krimi noviny','http://krimi.joj.sk/krimi-noviny-archiv.html',4,__dmdbase__+'krimi-noviny.jpg',1)
+    addDir('Najlepšie počasie','http://www.joj.sk/najlepsie-pocasie/najlepsie-pocasie-archiv.html',4,__dmdbase__+'najlepsie-pocasie.jpg',1)
+    addDir('Noviny','http://www.joj.sk/relacia-noviny/noviny-archiv.html',4,__dmdbase__+'noviny_01.jpg.jpg',1)
+    addDir('Noviny o 12:00','http://www.joj.sk/noviny-o-12-00/noviny-o-12-00-archiv.html',4,__dmdbase__+'noviny-o-12-00.jpg.jpg',1)
+    addDir('Noviny o 17:00','http://www.joj.sk/noviny-o-17-00/noviny-o-17-00-archiv.html',4,'http://c.static.joj.sk/uploads/tx_media/thumbs/310x175/noviny-o-17-00_79970.jpg',1)
+    addDir('Top Star','http://www.joj.sk/top-star/top-star-archiv.html',4,'http://b.static.joj.sk/uploads/tx_media/thumbs/150x82/joj-2-122004-0401-h264-pal_142574.jpg',1)
+    addDir('Šport','http://www.joj.sk/relacia-sport/sport-archiv.html',4,__dmdbase__+'sport.jpg',1)
 def OBSAH_SER():
-    addDir('Aféry','http://afery.joj.sk/afery-epizody.html',4,__dmdbase__+'afery.jpg')
-    addDir('Ako som prežil','http://www.joj.sk/ako-som-prezil/ako-som-prezil-epizody.html',4,'http://media.televize.cz/film/n1p7zky90ogv.jpg')
-    addDir('Dr.Ludský','http://www.joj.sk/dr-ludsky/dr-ludsky-epizody.html',4,__dmdbase__+'dr-ludsky.jpg')
-    addDir('Hoď svišťom','http://hodsvistom.joj.sk/hod-svistom-epizody.html',4,'http://img.csfd.cz/posters/30/300577_1.jpg')
-    addDir('Keby bolo keby','http://www.joj.sk/keby-bolo-keby/keby-bolo-keby-epizody.html',4,__dmdbase__+'kbk.jpg')
-    addDir('Mafstory','http://mafstory.joj.sk/mafstory-epizody.html',4,__dmdbase__+'mafstory.jpg')
-    addDir('Nevinní','http://nevinni.joj.sk/nevinni-epizody.html',4,__dmdbase__+'nevinni.jpg')    
-    addDir('Panelák','http://panelak.joj.sk/panelak-epizody.html',4,__dmdbase__+'panelak.jpg')
-    addDir('Profesionáli','http://profesionali.joj.sk/profesionali-epizody.html',4,__dmdbase__+'profesionali.jpg')
-    addDir('Prvé oddelenie','http://www.joj.sk/prve-oddelenie/prve-oddelenie-epizody.html',4,__dmdbase__+'prve-oddelenie.jpg')
+    addDir('Aféry','http://afery.joj.sk/afery-epizody.html',4,__dmdbase__+'afery.jpg',1)
+    addDir('Ako som prežil','http://www.joj.sk/ako-som-prezil/ako-som-prezil-epizody.html',4,'http://media.televize.cz/film/n1p7zky90ogv.jpg',1)
+    addDir('Dr.Ludský','http://www.joj.sk/dr-ludsky/dr-ludsky-epizody.html',4,__dmdbase__+'dr-ludsky.jpg',1)
+    addDir('Hoď svišťom','http://hodsvistom.joj.sk/hod-svistom-epizody.html',4,'http://img.csfd.cz/posters/30/300577_1.jpg',1)
+    addDir('Keby bolo keby','http://www.joj.sk/keby-bolo-keby/keby-bolo-keby-epizody.html',4,__dmdbase__+'kbk.jpg',1)
+    addDir('Mafstory','http://mafstory.joj.sk/mafstory-epizody.html',4,__dmdbase__+'mafstory.jpg',1)
+    addDir('Nevinní','http://nevinni.joj.sk/nevinni-epizody.html',4,__dmdbase__+'nevinni.jpg',1)    
+    addDir('Panelák','http://panelak.joj.sk/panelak-epizody.html',4,__dmdbase__+'panelak.jpg',1)
+    addDir('Profesionáli','http://profesionali.joj.sk/profesionali-epizody.html',4,__dmdbase__+'profesionali.jpg',1)
+    addDir('Prvé oddelenie','http://www.joj.sk/prve-oddelenie/prve-oddelenie-epizody.html',4,__dmdbase__+'prve-oddelenie.jpg',1)
 
 def OBSAH_ZAB():
-    addDir('Ano, šéfe!','http://anosefe.joj.sk/anosefe-epizody.html',4,__dmdbase__+'anosefe.jpg')
-    addDir('Bordelári','http://www.bordelari.sk/bordelari-archiv.html',4,'http://a.static.joj.sk/uploads/tx_media/thumbs/306x172/bordelari_79969.jpg')
-    addDir('ČS má Talent','http://www.csmatalent.cz/video-cz.html',6,__dmdbase__+'talent.jpg')
-    addDir('Hladá sa milionár','http://www.joj.sk/hlada-sa-milionar/hlada-sa-milionar-archiv.html',4,__dmdbase__+'hlada-sa-milionar.jpg')
-    addDir('Chutíš mi','http://www.chutismi.sk/chutis-mi-archiv.html',4,__dmdbase__+'chutismi.jpg')
-    addDir('Extrémne rodiny','http://extremnerodiny.joj.sk/extremne-rodiny-archiv.html',4,'http://c.static.joj.sk/uploads/tx_media/thumbs/306x172/extremne-rodiny_84528.jpg')
-    addDir('Farmár hľadá ženu 2','http://www.farmarhladazenu.sk/epizody.html',8,'http://t2.gstatic.com/images?q=tbn:ANd9GcRRJbqnrXcT-Ius3Qo29sc-KPVKuNkVjRq5zx51P3FSdpzLL0VD')
-    addDir('Kapor na torte','http://www.joj.sk/kapor-na-torte-den-prvy/kapor-na-torte-den-prvy-archiv.html',4,__dmdbase__+'kapor-na-torte.jpg')
-    addDir('Kutyil s.r.o','http://www.joj.sk/kutyil/kutyil-epizody.html',4,__dmdbase__+'kutyil-logo.jpg')
-    addDir('Mama ožeň ma','http://www.mamaozenma.sk/mama-ozen-ma-epizody.html',7,'http://reality-show.panacek.com/wp-content/2015-mama_ozen_ma2.jpg')
-    addDir('Nebožies','http://plus.joj.sk/neboziec/epizody.html',4,'http://a.static.joj.sk/uploads/tx_media/thumbs/310x175/logo_77360.jpg')
-    addDir('Nové bývanie','http://novebyvanie.joj.sk/nove-byvanie-archiv.html',4,__dmdbase__+'nove-byvanie.jpg')
-    addDir('Sedem','http://www.joj.sk/sedem/sedem-archiv.html',4,__dmdbase__+'sedem.jpg')
-    addDir('Odsůdené','http://www.joj.sk/odsudene/odsudene-epizody.html',4,__dmdbase__+'odsudene.jpg')
-    addDir('Sůdna sieň','http://www.joj.sk/sudna-sien/sudna-sien-archiv.html',4,__dmdbase__+'sudna-sien.jpg')
-    addDir('Šéfka','http://www.sefka.sk/epizody.html',5,__dmdbase__+'sefka-logo.jpg')
-    addDir('Tajný sen','http://www.joj.sk/tajny-sen/tajny-sen-archiv.html',4,__dmdbase__+'tajny-sen.jpg')
-    addDir('Riskni milión','http://risknimilion.joj.sk/archiv.html',4,__dmdbase__+'riskni.jpg')    
+    addDir('Ano, šéfe!','http://anosefe.joj.sk/anosefe-epizody.html',4,__dmdbase__+'anosefe.jpg',1)
+    addDir('Bordelári','http://www.bordelari.sk/bordelari-archiv.html',4,'http://a.static.joj.sk/uploads/tx_media/thumbs/306x172/bordelari_79969.jpg',1)
+    addDir('ČS má Talent','http://www.csmatalent.cz/video-cz.html',6,__dmdbase__+'talent.jpg',1)
+    addDir('Hladá sa milionár','http://www.joj.sk/hlada-sa-milionar/hlada-sa-milionar-archiv.html',4,__dmdbase__+'hlada-sa-milionar.jpg',1)
+    addDir('Chutíš mi','http://www.chutismi.sk/chutis-mi-archiv.html',4,__dmdbase__+'chutismi.jpg',1)
+    addDir('Extrémne rodiny','http://extremnerodiny.joj.sk/extremne-rodiny-archiv.html',4,'http://c.static.joj.sk/uploads/tx_media/thumbs/306x172/extremne-rodiny_84528.jpg',1)
+    addDir('Farmár hľadá ženu 2','http://www.farmarhladazenu.sk/epizody.html',8,'http://t2.gstatic.com/images?q=tbn:ANd9GcRRJbqnrXcT-Ius3Qo29sc-KPVKuNkVjRq5zx51P3FSdpzLL0VD',1)
+    addDir('Kapor na torte','http://www.joj.sk/kapor-na-torte-den-prvy/kapor-na-torte-den-prvy-archiv.html',4,__dmdbase__+'kapor-na-torte.jpg',1)
+    addDir('Kutyil s.r.o','http://www.joj.sk/kutyil/kutyil-epizody.html',4,__dmdbase__+'kutyil-logo.jpg',1)
+    addDir('Mama ožeň ma','http://www.mamaozenma.sk/mama-ozen-ma-epizody.html',7,'http://reality-show.panacek.com/wp-content/2015-mama_ozen_ma2.jpg',1)
+    addDir('Nebožies','http://plus.joj.sk/neboziec/epizody.html',4,'http://a.static.joj.sk/uploads/tx_media/thumbs/310x175/logo_77360.jpg',1)
+    addDir('Nové bývanie','http://novebyvanie.joj.sk/nove-byvanie-archiv.html',4,__dmdbase__+'nove-byvanie.jpg',1)
+    addDir('Sedem','http://www.joj.sk/sedem/sedem-archiv.html',4,__dmdbase__+'sedem.jpg',1)
+    addDir('Odsůdené','http://www.joj.sk/odsudene/odsudene-epizody.html',4,__dmdbase__+'odsudene.jpg',1)
+    addDir('Sůdna sieň','http://www.joj.sk/sudna-sien/sudna-sien-archiv.html',4,__dmdbase__+'sudna-sien.jpg',1)
+    addDir('Šéfka','http://www.sefka.sk/epizody.html',5,__dmdbase__+'sefka-logo.jpg',1)
+    addDir('Tajný sen','http://www.joj.sk/tajny-sen/tajny-sen-archiv.html',4,__dmdbase__+'tajny-sen.jpg',1)
+    addDir('Riskni milión','http://risknimilion.joj.sk/archiv.html',4,__dmdbase__+'riskni.jpg',1)    
 
 
     
-def LIST(url):
-    #self.core.setSorting('NONE')
+def LIST(url,strana):
     req = urllib2.Request(url)
     req.add_header('User-Agent', _UserAgent_)
     response = urllib2.urlopen(req)
     httpdata = response.read()
     response.close()
-    match = re.compile('<td><strong><a href="(.+?)">(.+?)</a>').findall(httpdata)
+    if strana !=1:
+        strankovani = re.compile('<form action="services(.+?)">').findall(httpdata)  
+        cast_url = urlparse(url)
+        paging = re.sub('&amp;','&',strankovani[0])        
+        paging = 'http://'+cast_url[1]+'/services'+paging
+        data = "paging=1&pagingOffset="+str(strana)       
+        request = urllib2.Request(paging)
+        request.add_data(data)
+        request.add_header("Referer",url)    
+        request.add_header("Origin","http://"+cast_url[1])
+        request.add_header("X-Requested-With","XMLHttpRequest")
+        request.add_header("User-Agent",_UserAgent_)
+        request.add_header("Content-Type","application/x-www-form-urlencoded")
+        con = urllib2.urlopen(request)
+        data = con.read()
+        con.close()
+        httpdata = str(data)
+        match = re.compile('<td><strong><a title=".+?" href="(.+?)">(.+?)</a>').findall(httpdata)
+    else:        
+        match = re.compile('<td><strong><a title=".+?" href="(.+?)">(.+?)</a>').findall(httpdata)        
     for link,name in match:
-        addDir(name,link,10,icon)
+        #print link,name
+        addDir(name,link,10,icon,1)
     try:
-        doc = read_page(url)
-        items = doc.find('ul', 'x-pager')
-        print items
-        for item in items.findAll('a'):
-            page = item.text.encode('utf-8') 
-            if re.match('Nasledujúca', page, re.U):
-                next_url = item['href']
-                addDir('Další strana',next_url,4,nexticon)
+        strankovani = re.compile('title="Nasledujúce" href="#" data-name="pagingOffset" data-value="(.+?)"').findall(httpdata)
+        next_page = strankovani[0]
+        print next_page                
+        addDir('>> Další strana >>',url,4,nexticon,str(next_page))
     except:
         print 'strankovani nenalezeno'
 
@@ -96,7 +112,7 @@ def LIST_2(url):
             name = 'Bezejmenný titul'
         url = str(item.a['href']) 
         thumb = str(item.img['src'])   
-        addDir(name,'http://www.sefka.sk/'+url,10,thumb)
+        addDir(name,'http://www.sefka.sk/'+url,10,thumb,1)
 
 def LIST_3(url):
     doc = read_page(url)
@@ -108,13 +124,13 @@ def LIST_3(url):
             name = 'Bezejmenný titul'
         url = str(item.a['href']) 
         thumb = str(item.img['src'])   
-        addDir(name,'http://www.csmatalent.cz/'+url,11,thumb)
+        addDir(name,'http://www.csmatalent.cz/'+url,11,thumb,1)
     try:
         items = doc.find('ul', 'b-box b-pager-x c')
         dalsi = items.find('li', 'next')
         if len(dalsi) != 0:
             next_url = str(dalsi.a['href']) 
-            addDir('>> Další strana >>','http://www.csmatalent.cz/'+next_url,6,nexticon)
+            addDir('>> Další strana >>','http://www.csmatalent.cz/'+next_url,6,nexticon,1)
     except:
         print 'strankovani nenalezeno'
 
@@ -128,13 +144,13 @@ def LIST_4(url):
             name = 'Bezejmenný titul'
         url = str(item.a['href']) 
         thumb = str(item.img['src'])   
-        addDir(name,'http://www.mamaozenma.sk/'+url,10,thumb)
+        addDir(name,'http://www.mamaozenma.sk/'+url,10,thumb,1)
     try:
         items = doc.find('ul', 'b-box b-pager-x c')
         dalsi = items.find('li', 'next')
         if len(dalsi) != 0:
             next_url = str(dalsi.a['href']) 
-            addDir('>> Další strana >>','http://www.mamaozenma.sk/'+next_url,7,nexticon)
+            addDir('>> Další strana >>','http://www.mamaozenma.sk/'+next_url,7,nexticon,1)
     except:
         print 'strankovani nenalezeno'
 
@@ -148,13 +164,13 @@ def LIST_5(url):
             name = 'Bezejmenný titul'
         url = str(item.a['href']) 
         thumb = str(item.img['src'])   
-        addDir(name,'http://www.farmarhladazenu.sk/'+url,10,'http://www.farmarhladazenu.sk/'+thumb)
+        addDir(name,'http://www.farmarhladazenu.sk/'+url,10,'http://www.farmarhladazenu.sk/'+thumb,1)
     try:
         items = doc.find('ul', 'b-box b-pager-x c')
         dalsi = items.find('li', 'next')
         if len(dalsi) != 0:
             next_url = str(dalsi.a['href']) 
-            addDir('>> Další strana >>','http://www.farmarhladazenu.sk/'+next_url,8,nexticon)
+            addDir('>> Další strana >>','http://www.farmarhladazenu.sk/'+next_url,8,nexticon,1)
     except:
         print 'strankovani nenalezeno'
 
@@ -166,7 +182,7 @@ def VIDEOPORTAL(url):
         name = name.getText(" ").encode('utf-8')
         url = str(item.a['href']) 
         #print name,url
-        addDir(name,'http://www.videoportal.sk/'+url,12,icon)
+        addDir(name,'http://www.videoportal.sk/'+url,12,icon,1)
 
 def VP_LIST(url):
     doc = read_page(url)
@@ -179,11 +195,11 @@ def VP_LIST(url):
         url = str(item.a['href']) 
         thumb = str(item.img['src'])
         #print name,url, thumb
-        addDir(name,'http://www.videoportal.sk/'+url,13,thumb)
+        addDir(name,'http://www.videoportal.sk/'+url,13,thumb,1)
     try:
         items = doc.find('ul', 'm-move right c')
         match = re.compile('<li><a class="next" href="(.+?)"').findall(str(items))
-        addDir('>> Další strana >>','http://www.videoportal.sk/'+match[0],12,nexticon)
+        addDir('>> Další strana >>','http://www.videoportal.sk/'+match[0],12,nexticon,1)
     except:
         print 'strankovani nenalezeno'
         
@@ -313,7 +329,7 @@ def PARADISE_CAT_LIST(url):
         link = item['href'].encode('utf-8')
         name = item['title'].encode('utf-8')
         print link,name
-        addDir(name,link,21,icon)
+        addDir(name,link,21,icon,1)
 
 def PARADISE_LIST(url):
     doc = read_page(url)
@@ -328,13 +344,13 @@ def PARADISE_LIST(url):
         url = str(item.a['href']) 
         thumb = str(item.img['src'])   
         #print name,url,thumb
-        addDir(name,url,10,thumb)
+        addDir(name,url,10,thumb,1)
     try:
         items = doc.find('ul', 'x-pager x-pager-center j-centerer-bull c')
         dalsi = items.find('li', 'next')
         if len(dalsi) != 0:
             next_url = str(dalsi.a['href']) 
-            addDir('>> Další strana >>',next_url,21,nexticon)
+            addDir('>> Další strana >>',next_url,21,nexticon,1)
     except:
         print 'strankovani nenalezeno'
 
@@ -368,8 +384,8 @@ def addLink(name,url,iconimage,popis):
         ok=xbmcplugin.addDirectoryItem(handle=int(sys.argv[1]),url=url,listitem=liz)
         return ok
 
-def addDir(name,url,mode,iconimage):
-        u=sys.argv[0]+"?url="+urllib.quote_plus(url)+"&mode="+str(mode)+"&name="+urllib.quote_plus(name)
+def addDir(name,url,mode,iconimage,page):
+        u=sys.argv[0]+"?url="+urllib.quote_plus(url)+"&mode="+str(mode)+"&name="+urllib.quote_plus(name)+"&page="+str(page)
         ok=True
         liz=xbmcgui.ListItem(name, iconImage="DefaultFolder.png", thumbnailImage=iconimage)
         liz.setInfo( type="Video", infoLabels={ "Title": name } )
@@ -382,6 +398,7 @@ url=None
 name=None
 thumb=None
 mode=None
+page=None
 
 try:
         url=urllib.unquote_plus(params["url"])
@@ -392,6 +409,10 @@ try:
 except:
         pass
 try:
+        page=int(params["page"])
+except:
+        pass
+try:
         mode=int(params["mode"])
 except:
         pass
@@ -399,6 +420,7 @@ except:
 print "Mode: "+str(mode)
 print "URL: "+str(url)
 print "Name: "+str(name)
+print "Page: "+str(page)
 
 if mode==None or url==None or len(url)<1:
         print ""
@@ -418,7 +440,8 @@ elif mode==3:
 
 elif mode==4:
         print ""+url
-        LIST(url)
+        print ""+str(page)        
+        LIST(url,page)
 
 elif mode==5:
         print ""+url
